tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions5.errors.txt
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions5.ts(5,29): error TS1109: Expression expected.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions5.ts(5,30): error TS1005: '}' expected.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions5.ts(5,30): error TS2554: Expected 3 arguments, but got 4.


==== tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions5.ts (3 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, but too many parameters.
    f `123qdawdrqw${ 1 }${ 2 }${ 
                                
!!! error TS1109: Expression expected.
                                 
!!! error TS1005: '}' expected.
                                 
!!! error TS2554: Expected 3 arguments, but got 4.